# OminiX-CUDA

./: CHANGELOG.md  CMakeLists.txt  LLM_CANN_OPTIMIZATIONS.md  NATIVE_TTS_CONTRACT.md  README.md  SHIP_SUMMARY.md  change.md  run.py  run_asr.py
docs/: aclgraph_feasibility.md  ascend_910b4_datasheet.md  asr_a0_discovery.md  asr_a1a_baseline.md  asr_tier1_gate_spec.md  cannfusion_issue_body.md  cannfusion_upstream_ask.md  cuda_phase1_baseline.md  cuda_phase2_talker.md  cuda_qie_optimization.md  cuda_qwen3_tts_optimization.md  deck_ascend_agentic_ai.md  ggml_cann_gather_v3_fix.md  ggml_cann_prec_f32_elementwise.md  ggml_cann_sync_in_capture_fix.md  llm_mutil_npu_brief.md  qie_edit_nan_diagnosis.md  qie_q0_5_rope_v2_layout.md  qie_q0v2_discovery.md  qie_q1_3_gather_v3_probe.md  qie_q1_baseline.md  qie_q2_phase4_smoke.md  qie_q4_cfg_batching.md  qkv_grouped_probe_verdict.md  qwen_tts_optimization_learnings.md  qwen_tts_optimization_writeup.zh.md  tts_fias_a4c_phase3_smoke.md  v2_rope_numerics_debug.md
docs/asr_a1a_data/: rtf_calib_q8_cann.json  tier1_q8_cann_clean.json
docs/contracts/: 40FPS_CONTRACT.md  ACLGRAPH_CONTRACT.md  ASCEND_API_BRIDGE_CONTRACT.md  CANNFUSION_CONTRACT.md  CP_FPS_OPTIMIZATION_CONTRACT.md  OMINIX_CUDA_CONTRACT.md  PATH_C_ASCENDC_CONTRACT.md  QWEN3_ASR_CONTRACT.md  QWEN_IMAGE_EDIT_2511_CONTRACT.md  QWEN_IMAGE_EDIT_CONTRACT.md
ggml/: CMakeLists.txt
ggml/include/: ggml-cann.h
ggml/src/ggml-cann/: aclnn_ops.cpp  aclnn_ops.h  common.h  ggml-cann.cpp
ggml/src/ggml-cuda/: binbcast.cu  binbcast.cuh  ggml-cuda.cu  norm.cu  norm.cuh
include/: llama.h
reports/: cann_debugging_methodology.md  qwen35_cann_segfault_fix.md
scripts/: tts_e2e_bench.py
scripts/demos/: run_all.sh  run_asr.sh  run_qie_edit.sh  run_tts.sh
tools/: CMakeLists.txt
tools/gptsovits/: CMakeLists.txt  README.MD  audio_postprocess.cpp  audio_postprocess.h  export_gptsovits.py  fake_infers.hpp  gptsovits.cpp  gptsovits.h  infer_session.hpp  llm.cpp  llm.h  main.cpp  model_defs.h  proj.hpp  prompt_cache.h  sovits_utils.hpp  text_preprocessor.cpp  text_preprocessor.h  timer.hpp  vits.hpp
tools/ominix_diffusion/: CMakeLists.txt  README.md
tools/ominix_diffusion/cli/: CMakeLists.txt  main.cpp
tools/ominix_diffusion/server/: CMakeLists.txt
tools/ominix_diffusion/src/: CMakeLists.txt  diffusion_model.hpp  flux.hpp  ggml_extend.hpp  llm.hpp  qwen_image.hpp  stable-diffusion.cpp  wan.hpp
tools/probes/qie_block0_cpu_reference/: compare_block0.py  test_qie_block0_cpu_reference.cpp
tools/probes/qie_q2_q4resident_probe/: build_and_run_q4_1_variants.sh  test_qie_q4_1_variants.cpp
tools/probes/qie_q42_60block_smoke/: test_qie_q42_60block_smoke.cpp
tools/probes/qie_q43_denoise_smoke/: test_qie_q43_denoise_smoke.cpp
tools/qwen_asr/: CMakeLists.txt  README.md  audio_encoder.cpp  audio_encoder.h  dump_mel.cpp  export_audio_encoder.py  export_decoder_llama.py  gguf  main.cpp  mel_spectrogram.cpp  qwen_asr.cpp  qwen_asr.h  save_python_features.py  test_conv2d_minimal.cpp  test_encoder.cpp  test_with_python_mel.py  verify_audio_encoder.py  verify_conv2d.py
tools/qwen_asr/native/: asr_cuda_engine.cpp  asr_cuda_engine.h  audio_encoder_cuda_engine.cpp  audio_encoder_cuda_engine.h  mel_spectrogram.cpp  mel_spectrogram.h  test_audio_encoder_cuda.cpp  test_qwen_asr_cuda_e2e.cpp  test_qwen_asr_cuda_init.cpp
tools/qwen_asr/native/cuda_kernels/: audio_encoder_kernels.cu  audio_encoder_kernels.h
tools/qwen_asr/verify_data/: after_conv2d3.npy  after_conv_out.npy  after_flatten.npy  after_layer0_attn.npy  after_layer0_full.npy  after_layer0_norm.npy  after_pos_emb.npy  attention_mask_2d.npy  encoder_output_verify.npy  feature_attention_mask.npy  hidden_states_input.npy  input_ids.npy  mel_filters_whisper.npy  mel_reference.npy  padded_mel.npy  pos_emb.npy
tools/qwen_common/: audio_io.cpp  build_graph.cpp
tools/qwen_image_edit/: CMakeLists.txt
tools/qwen_image_edit/cuda/: bench_qie_diffusers.py
tools/qwen_image_edit/native/: image_diffusion_cuda_engine.cpp  image_diffusion_cuda_engine.h  image_diffusion_engine.cpp  image_diffusion_engine.h  test_image_diffusion_cuda_block.cpp  test_image_diffusion_cuda_dit.cpp  test_image_diffusion_cuda_e2e.cpp  test_image_diffusion_cuda_init.cpp
tools/qwen_image_edit/native/cuda_kernels/: dit_kernels.cu  dit_kernels.h
tools/qwen_tts/: CMakeLists.txt  README.md  bench_multi.cpp  compare_components.py  compare_mel.py  compare_spk_encoder.py  cp_cann_engine.cpp  cp_cann_engine.h  cp_cann_symbols.cpp  cp_cann_symbols.h  debug_spk_layers.py  export_cp_llama.py  export_qwen_tts.py  export_talker_llama.py  gguf  infer_session.hpp  main.cpp  model_defs.cpp  qwen_tts.cpp  qwen_tts.h  qwen_tts_api.cpp  qwen_tts_api.h  qwen_tts_api.version  speaker_encoder.cpp  speaker_encoder.h  speech_tokenizer_decoder.cpp  speech_tokenizer_decoder.h  speech_tokenizer_encoder.cpp  speech_tokenizer_encoder.h  stft.cpp  stft.h  talker.cpp  talker.h  talker_cann_engine.cpp  talker_cann_engine.h  test_code_predictor.cpp  test_conv_transpose_cann.cpp  test_cp_flow.cpp  test_decoder_quality.cpp  test_encoder.cpp  (+16 more)
tools/qwen_tts/data/: ref_mel_spectrogram.txt
tools/qwen_tts/data/ref_audios/: bys_ref.txt  cove_ref.txt  doubao_ref.txt  ellen_ref.txt  juniper_ref.txt  luoxiang_ref.txt  mabaoguo_ref.txt  maple_ref.txt  mayun_ref.txt  shenyi_ref.txt  trump_ref.txt  yangmi_ref.txt  zhoujielun_ref.txt
tools/qwen_tts/native/: bench_fp8_gemv.cu  speech_tokenizer_decoder_cuda_engine.cpp  speech_tokenizer_decoder_cuda_engine.h  talker_cuda_engine.cpp  talker_cuda_engine.h  test_codec_cuda.cpp  test_qwen_tts_e2e.cpp  test_speech_tokenizer_decoder_init.cpp  test_talker_cuda_autoreg.cpp  test_talker_cuda_decode.cpp  test_talker_cuda_init.cpp  tts_server.cpp
tools/qwen_tts/native/cuda_kernels/: attn_gqa.cu  cuda_kernels.h  decoder_ops.cu  elementwise.cu  embedding_lookup.cu  rmsnorm.cu  rope_neox.cu  sampler.cu  swiglu.cu
tools/qwen_tts/scripts/: verify_code_predictor.py  verify_decoder.py  verify_encoder.py  verify_gguf.py  verify_speaker_encoder.py
(+3 files in other folders)
